--- a/research.html
+++ b/research.html
@@ -197,13 +197,22 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/JSEN.2024.3356651" target="_blank" rel="noopener noreferrer">10.1109/JSEN.2024.3356651</a>
 				</tr></td>
 				<tr><td>
-					<i>Robust Human Locomotion and Localization Activity Recognition over Multisensory.</i> Khan, D., Alonazi, M., Abdelhaq, M.*, Mudawi, N. A., Algarni, A., Jalal, A.*, Liu, H.* (2024). Frontiers in Physiology, 15:1344887.<br>
+					<i>Robust Human Locomotion and Localization Activity Recognition over Multisensory.</i> Khan, D., Alonazi, M., Abdelhaq, M.*, Mudawi, N. A., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Frontiers in Physiology, 15:1344887.<br>
 					<a href="https://scholar.google.de/scholar?q=Robust+Human+Locomotion+and+Localization+Activity+Recognition+over+Multisensory" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Robust-human-locomotion-and-localization-activity-Khan-Alonazi/bb90b2c6698b935dcc789faab546118be8717927" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/378393968_Robust_human_locomotion_and_localization_activity_recognition_over_multisensory" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/physiology/articles/10.3389/fphys.2024.1344887/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=khan2024har&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fphys.2024.1344887" target="_blank" rel="noopener noreferrer">10.3389/fphys.2024.1344887</a>
+				</tr></td>
+				<tr><td>
+					<i>Biosensor-Driven IoT Wearables for Accurate Body Motion Tracking and Localization.</i> Almujally, N. A., Khan, D, Mudawi, N. A., Alonazi, M., Alazeb, A., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Sensors 24(10):3032.<br>
+					<a href="https://scholar.google.com/scholar?q=Biosensor-Driven+IoT+Wearables+for+Accurate+Body+Motion+Tracking+and+Localization" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/380552972_Biosensor-Driven_IoT_Wearables_for_Accurate_Body_Motion_Tracking_and_Localization" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/1424-8220/24/10/3032" target="_blank" rel="noopener noreferrer"><img src="images/Sensors.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=Almujally2024IoT&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/s24103032" target="_blank" rel="noopener noreferrer">10.3390/s24103032</a>
 				</tr></td>
 				<tr><td>
 					<i>Understanding Naturalistic Facial Expressions with Deep Learning and Multimodal Large Language Models.</i> Bian, Y., Küster, D., Liu H., and Krumhuber, E. G.* (2024). Sensors, 24(1):126.<br>
@@ -217,10 +226,10 @@
 				<tr><td>
 					<i>Cardiorespiratory Response to Workload Volume and Ergonomic Risk: Automotive Assembly Line Operators’ Adaptations.</i> Furk, D., Silva, L.*, Dias, M., Fujão, C., Probst, P., Liu, H., Gamboa, H. (2024). Applied Sciences, 14(9):3921.<br>
 					<a href="https://scholar.google.com/scholar?q=Cardiorespiratory+Response+to+Workload+Volume+and+Ergonomic+Risk%3A+Automotive+Assembly+Line+Operators’+Adaptations" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Cardiorespiratory-Response-to-Workload-Volume-and-Furk-Silva/84e55a2464c47b2017c65a39a28aa4427dbe0799" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/380382468_Cardiorespiratory_Response_to_Workload_Volume_and_Ergonomic_Risk_Automotive_Assembly_Line_Operators'_Adaptations" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/2076-3417/14/9/3921	" target="_blank" rel="noopener noreferrer"><img src="images/Applied_Sciences.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=furk202cardiorespiratory&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/2076-3417/14/9/3921" target="_blank" rel="noopener noreferrer"><img src="images/Applied_Sciences.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=furk2024cardiorespiratory&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/app14093921" target="_blank" rel="noopener noreferrer">10.3390/app14093921</a>
 				</tr></td>
 				<tr><td>
@@ -255,7 +264,7 @@
 					<a href="https://scholar.google.com/scholar?q=Hybrid+modeling+on+reconstitution+of+continuous+arterial+blood+pressure+using+finger+photoplethysmography" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Hybrid-modeling-on-reconstitution-of-continuous/72ac3930e09b7ec7008ea029cba28ae1ba709e54" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/370529977_Hybrid_Modeling_on_Reconstitution_of_Continuous_Arterial_Blood_Pressure_Using_Finger_Photoplethysmography" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/abs/pii/S1746809423004056?via%3Dihub" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15" class="pop15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/abs/pii/S1746809423004056?via%3Dihub" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=shi2023ppg2abp&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1016/j.bspc.2023.104972" target="_blank" rel="noopener noreferrer">10.1016/j.bspc.2023.104972</a>
 				</tr></td>
@@ -284,7 +293,7 @@
 					<a href="https://scholar.google.com/scholar?q=TSSEARCH%3A+Time+Series+Subsequence+Search+Library" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/TSSEARCH%3A-Time-Series-Subsequence-Search-Library-Folgado-Barandas/88ae58d7183b13c72e67f90ee71e20cc87aa61f6" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/359648631_TSSEARCH_Time_Series_Subsequence_Search_Library" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/pii/S2352711022000425" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15" class="pop15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/pii/S2352711022000425" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.aicos.fraunhofer.pt/en/publications.html" target="_blank" rel="noopener noreferrer"><img src="images/Aicos.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://novaresearch.unl.pt/en/publications/tssearch-time-series-subsequence-search-library" target="_blank" rel="noopener noreferrer"><img src="images/Nova.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://run.unl.pt/handle/10362/143322" target="_blank" rel="noopener noreferrer"><img src="images/RUN.png" height="15"></a>
@@ -308,7 +317,7 @@
 					<a href="https://scholar.google.com/scholar?q=TSFEL%3A+Time+series+feature+extraction+library+barandas" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a></b>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/TSFEL%3A-Time-Series-Feature-Extraction-Library-Barandas-Folgado/30d86ed68c163455b8f3ef10a5bf4c92ee8707bc" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/340085788_TSFEL_Time_Series_Feature_Extraction_Library" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/pii/S2352711020300017" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15" class="pop15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/pii/S2352711020300017" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://novaresearch.unl.pt/en/publications/tsfel-time-series-feature-extraction-library" target="_blank" rel="noopener noreferrer"><img src="images/Nova.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://run.unl.pt/handle/10362/117283" target="_blank" rel="noopener noreferrer"><img src="images/RUN.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=barandas2020tsfel&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
@@ -321,6 +330,17 @@
 				<tr><td>
 					<img src="images/Conference.png" height="25">
 				</tr></td>
+				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>Examining the Effects of Human-Likeness of Avatars on Emotion Perception and Emotion Elicitation.</i> Zhang, S., Faruk, O., Porzel, R., Küster, D., Schultz, T., and Liu, H. (2024). In ABC 2024 - 6th International Conference on Activity and Behavior Computing. IEEE.<br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+				</tr></td>
+				-->
 				<tr><td>
 					<i>Comfort Assessment Method of EEG-Based Exoskeleton Walking-Assistive Device.</i> Zhou, C., Wang, H., Li, K., Liu, H., and Ye, X. (2024).  In BIOSTEC 2024 - Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies - BIOSIGNALS, pages 675-682. INSTICC, SciTePress.<br>
 					<a href="https://scholar.google.com/scholar?q=Comfort+assessment+method+of+eeg-based+exoskeleton+walkingassistive+device" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
