--- a/publications.html
+++ b/publications.html
@@ -107,6 +107,17 @@
 		<img src="images/Journal.png" height="25">
 	</tr></td>
 	<tr><td>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>Multi-Modal Remote Perception Learning for Object Sensory Data.</i> Alazeb, A., Chughtai, B. R., Mudawi, N. A., Alqahtani, Y., Alonazi, M., Aljuaid, H., Jalal, A.*, and Liu, H.* (2024). Frontiers in Neurorobotics.<br>
+		<!--
+		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+	</tr></td>
+	-->
+	<tr><td>
 		<i>MS2OD: Outlier Detection Using Minimum Spanning Tree and Medoid Selection.</i> Li, J., Li, JW, Wang, C., Verbeek F. J.*, Schultz, T., and Liu, H.* (2024). Machine Learning: Science and Technology, 5:015025. IOPscience.<br>
 		<a href="https://scholar.google.com/scholar?q=MS2OD%3A+Outlier+Detection+Using+Minimum+Spanning+Tree+and+Medoid+Selection" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/MS2OD%3A-Outlier-Detection-Using-Minimum-Spanning-and-Li-Li/9f2f5a172ec1f1cbd22e522c336282010beeb283" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -134,7 +145,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fphys.2024.1344887" target="_blank" rel="noopener noreferrer">10.3389/fphys.2024.1344887</a>
 	</tr></td>
 	<tr><td>
-		<i>Biosensor-Driven IoT Wearables for Accurate Body Motion Tracking and Localization.</i> Almujally, N. A., Khan, D, Mudawi, N. A., Alonazi, M., Alazeb, A., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Sensors 24(10):3032.<br>
+		<i>Biosensor-Driven IoT Wearables for Accurate Body Motion Tracking and Localization.</i> Almujally, N. A., Khan, D., Mudawi, N. A., Alonazi, M., Alazeb, A., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Sensors 24(10):3032.<br>
 		<a href="https://scholar.google.com/scholar?q=Biosensor-Driven+IoT+Wearables+for+Accurate+Body+Motion+Tracking+and+Localization" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/380552972_Biosensor-Driven_IoT_Wearables_for_Accurate_Body_Motion_Tracking_and_Localization" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
