--- a/researchcn.html
+++ b/researchcn.html
@@ -554,16 +554,23 @@
 					<td align="center">学术会议 Technical Program Chair (TPC)</td>
 					<td>
 						<a href="https://www.artinhci.com/Committee.aspx" target="_blank" rel="noopener noreferrer"><img src="images/ArtInHCI.png" height="35" class="pop1"></a><br>
-						&#9679; ArtInHCI 2024 - 2<sup>nd</sup> International Conference on Artificial Intelligence and Human-Computer Interaction
+						&#9679; ArtInHCI 2024 - 2<sup>nd</sup> International Conference on Artificial Intelligence and Human-Computer Interaction, Kunming, China
 					</td>
 				</tr>
 				<tr>
 					<td align="center">学术会议 Area Chair (AC)</td>
 					<td>
-						<a href="https://e-nns.org/icann2024/" target="_blank" rel="noopener noreferrer"><img src="images/ICANN2024.png" height="23" class="pop1"></a><br>
+						<a href="https://e-nns.org/icann2024/organization/program-committee/" target="_blank" rel="noopener noreferrer"><img src="images/ICANN2024.png" height="23" class="pop1"></a><br>
 						&#9679; ICANN 2024 - 33<sup>rd</sup> International Conference on Artificial Neural Networks, Lugano, Switzerland<br>
 						<a href="https://www.ceii.asia/committee.html" target="_blank" rel="noopener noreferrer"><img src="images/CEII2024.png" height="30" class="pop1"></a><br>
 						&#9679; CEII 2024 - 7<sup>th</sup> Asia Conference on Cognitive Engineering and Intelligent Interaction, Singapore
+					</td>
+				</tr>
+				<tr>
+					<td align="center">学术会议 Publicity Chair</td>
+					<td>
+						<a href="https://www.icaigc.org/committee.html" target="_blank" rel="noopener noreferrer"><img src="images/AIGC2024.png" height="23" class="pop1"></a><br>
+						&#9679; AIGC 2024 - 2<sup>nd</sup>  International Conference on AI-generated Content, Beijing, China
 					</td>
 				</tr>
 				<tr>
