--- a/researchcn.html
+++ b/researchcn.html
@@ -1389,6 +1389,18 @@
 					</td>
 				</tr>
 
+				<tr>
+					<td align="center">
+						<img src="images/students/Finn_Redel.jpg" width="150" class="round"></a><br>
+						&copy;<b>Finn Redel（德）</b>
+					</td>
+					<td>
+						毕设进行<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 事件驱动的分布式色谱数据分析框架
+					</td>
+				</tr>
+
+
 				<!--
 				<tr>
 					<td align="center">
