--- a/research.html
+++ b/research.html
@@ -1389,6 +1389,17 @@
 					</td>
 				</tr>
 
+				<tr>
+					<td align="center">
+						<img src="images/students/Finn_Redel.jpg" width="150" class="round"></a><br>
+						&copy;<b>Finn Redel</b>
+					</td>
+					<td>
+						Graduation research in progress<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Event-driven and distributed analysis framework for chromatography data
+					</td>
+				</tr>
+
 				<!--
 				<tr>
 					<td align="center">
