--- a/research.html
+++ b/research.html
@@ -76,7 +76,15 @@
 			<tr><td><h1 align="left"><span style="text-decoration: overline">Research Keywords</span></h1></td></tr>
 			<tr><td><table align="left" cellpadding="15">
 				<tr>
-					<td><a href="images/Keywords.png" target="_blank" rel="noopener noreferrer"><img src="images/Keywords.png" width = "500" class="pop1"></a></td>
+					<td>
+						<a href="images/Keywords.png" target="_blank" rel="noopener noreferrer"><img src="images/Keywords.png" width = "500" class="pop1"></a><br>
+						Google global scholar rankings by field labels:<br>
+						&#9679; <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:biosignals" target="_blank" rel="noopener noreferrer">Biosignals</a> (17)<br>
+						&#9679; <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:hidden_markov_model" target="_blank" rel="noopener noreferrer">Hidden Markov Models</a> (4)<br>
+						&#9679; <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:sensor_data_fusion" target="_blank" rel="noopener noreferrer">Sensor Data Fusion</a> (17)<br>
+						&#9679; <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:folk_music" target="_blank" rel="noopener noreferrer">Folk Music</a> (2)<br>
+						&#9679; <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:chinese_music" target="_blank" rel="noopener noreferrer">Chinese Music</a> (2)<br>
+					</td>
 					<td colspan="2">
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/MseG4XWuGzs" title="Intelligent Knee Bandage for HAR" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						(Alternative source, downloadable: <a href="https://seafile.zfn.uni-bremen.de/f/6c96c91c878d4d1caa66/" target="_blank" rel="noopener noreferrer"><img src="images/Seafile.png" height="13"></a>)<br><br>
