--- a/researchcn.html
+++ b/researchcn.html
@@ -76,7 +76,15 @@
 			<tr><td><h1 align="left"><span style="text-decoration: overline">研究领域</span></h1></td></tr>
 			<tr><td><table align="left" cellpadding="15">
 				<tr>
-					<td><a href="images/KeywordsCN.png" target="_blank" rel="noopener noreferrer"><img src="images/KeywordsCN.png" width = "500" class="pop1"></a></td>
+					<td>
+						<a href="images/KeywordsCN.png" target="_blank" rel="noopener noreferrer"><img src="images/KeywordsCN.png" width = "500" class="pop1"></a><br>
+						谷歌“世界科学家影响力按领域标签排名”：<br>
+						&#9679; 生物信号 <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:biosignals" target="_blank" rel="noopener noreferrer">Biosignals</a> (17)<br>
+						&#9679; 隐马尔可夫模型 <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:hidden_markov_model" target="_blank" rel="noopener noreferrer">Hidden Markov Models</a> (4)<br>
+						&#9679; 多源传感器数据融合 <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:sensor_data_fusion" target="_blank" rel="noopener noreferrer">Sensor Data Fusion</a> (17)<br>
+						&#9679; 民族音乐 <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:folk_music" target="_blank" rel="noopener noreferrer">Folk Music</a> (2)<br>
+						&#9679; 中国音乐 <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:chinese_music" target="_blank" rel="noopener noreferrer">Chinese Music</a> (2)<br>
+					</td>
 					<td colspan="2">
 						<video width="560" controls="controls">
 							<source src="https://seafile.zfn.uni-bremen.de/f/6c96c91c878d4d1caa66/?dl=1" type="video/mp4" />
