--- a/reviewer.html
+++ b/reviewer.html
@@ -18,13 +18,9 @@
 		<br>
 		<img src="images/Elsevier.png" height="30" class="pop1"> <img src="images/ScienceDirect.png" height="30" class="pop1"><br>
 		&#9679; Biomedical Signal Processing and Control<br>
-		&#9679; Physical Communication<br>
 		<br>
 		<img src="images/TaylorFrancis.png" height="30" class="pop1"><br>
 		&#9679; Geo-spatial Information Science<br>
-		&#9679; The Imaging Science Journal<br>
-		&#9679; Computer Methods in Biomechanics and Biomedical Engineering<br>
-		&#9679; Geo-Spatial Information Science<br>
 		&#9679; Imaging Science Journal, The<br>
 		<br>
 		<img src="images/IOP.png" height=25"><br>
@@ -54,6 +50,7 @@
 		&#9679; Applied Sciences<br>
 		&#9679; Axioms<br>
 		&#9679; Big Data and Cognitive Computing<br>
+		&#9679; Bioengineering<br>
 		&#9679; Biomedicines<br>
 		&#9679; Biomimetics<br>
 		&#9679; Biosensors<br>
