--- a/publications.html
+++ b/publications.html
@@ -108,7 +108,7 @@
 	</tr></td>
 	<tr><td>
 		<img src="images/Forthcoming.png" height="20" class = "pop1">
-		<i>TPRO-NET: An EEG-Based Emotion Recognition Method Feflecting Subtle Changes in Emotion.</i> Zhang, X., Cheng, X.*, and Liu, H.* (2024). Scientific Reports. Springer Nature.<br>
+		<i>Template-Based Synergy Extrapolation Analysis for Prediction of Muscle Excitations.</i> Li, K., Zhou, C., Wang, D., Chen, Z, Guo, D, Pan, S.*, Liu, H.*, and Ye, X.* (2024). Physiological Measurement. IOPScience.<br>
 		<!--
 		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -117,6 +117,30 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
 	</tr></td>
 	-->
+	<tr><td>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>Semantic Segmentation and YOLO Detector over Aerial Vehicle Images.</i> Quresh, A. M., Butt, A. H., Alzazeb, A., Mudawi, N. A., Alonazi, M., Almujally, N. A., Jalal, A., and Liu, H.* (2024).  Computer, Materials & Continua. Tech Science Press.<br>
+		<!--
+		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+	</tr></td>
+	-->
+	<tr><td>
+		<i>TPRO-NET: An EEG-Based Emotion Recognition Method Feflecting Subtle Changes in Emotion.</i> Zhang, X., Cheng, X.*, and Liu, H.* (2024). Scientific Reports. Springer Nature.<br>
+		<!--
+		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+	    &nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		-->
+		<a href="https://www.researchgate.net/publication/381352163_TPRO-NET_an_EEG-based_emotion_recognition_method_reflecting_subtle_changes_in_emotion" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.nature.com/articles/s41598-024-62990-4" target="_blank" rel="noopener noreferrer"><img src="images/Springer_Professional.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/article/10.1038/s41598-024-62990-4?" target="_blank" rel="noopener noreferrer"><img src="images/SpringerLink.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=zhang2024eeg_emotion&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1038/s41598-024-62990-4" target="_blank" rel="noopener noreferrer">10.1038/s41598-024-62990-4</a>
+	</tr></td>
+	
 	<tr><td>
 		<i>MS2OD: Outlier Detection Using Minimum Spanning Tree and Medoid Selection.</i> Li, J., Li, JW, Wang, C., Verbeek F. J.*, Schultz, T., and Liu, H.* (2024). Machine Learning: Science and Technology, 5:015025. IOPscience.<br>
 		<a href="https://scholar.google.com/scholar?q=MS2OD%3A+Outlier+Detection+Using+Minimum+Spanning+Tree+and+Medoid+Selection" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
@@ -279,16 +303,15 @@
 		<img src="images/Conference.png" height="25">
 	</tr></td>
 	<tr><td>
-		<img src="images/Forthcoming.png" height="20" class = "pop1">
-		<i>Examining the Effects of Human-Likeness of Avatars on Emotion Perception and Emotion Elicitation.</i> Zhang, S., Faruk, O., Porzel, R., Küster, D., Schultz, T., and Liu, H. (2024). In ABC 2024 - 6th International Conference on Activity and Behavior Computing. IEEE.<br>
+		<i>Examining the Effects of Human-Likeness of Avatars on Emotion Perception and Emotion Elicitation.</i> Zhang, S., Faruk, O., Porzel, R., Küster, D., Schultz, T., and Liu, H.* (2024). In ABC 2024 - 6th International Conference on Activity and Behavior Computing. IEEE.<br>
 		<!--
 		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		-->
+		<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=Zhang2024avatar&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 	</tr></td>
-	-->
 	<tr><td>
 		<i>Comfort Assessment Method of EEG-Based Exoskeleton Walking-Assistive Device.</i> Zhou, C., Wang, H., Li, K., Liu, H., and Ye, X. (2024).  In BIOSTEC 2024 - Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies - BIOSIGNALS, pages 675-682. INSTICC, SciTePress.<br>
 		<a href="https://scholar.google.com/scholar?q=Comfort+assessment+method+of+eeg-based+exoskeleton+walkingassistive+device" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
