--- a/reviewer.html
+++ b/reviewer.html
@@ -30,8 +30,9 @@
 		&#9679; Engineering Research Express<br>
 		<br>
 		<img src="images/Frontiers.png" height="35" class="pop1"><br>
-		&#9679; Frontiers in Physiology<br>
+		&#9679; Frontiers in Plant Science<br>
 		&#9679; Frontiers in Bioengineering and Biotechnology<br>
+		&#9679; Frontiers in Physiology<br>
 		&#9679; Frontiers in Medicine<br>
 		&#9679; Frontiers in Big Data<br>
 		&#9679; Frontiers in Artificial Intelligence<br>
@@ -50,7 +51,6 @@
 		&#9679; Applied Sciences<br>
 		&#9679; Axioms<br>
 		&#9679; Big Data and Cognitive Computing<br>
-		&#9679; Bioengineering<br>
 		&#9679; Biomedicines<br>
 		&#9679; Biomimetics<br>
 		&#9679; Biosensors<br>
