--- a/researchcn.html
+++ b/researchcn.html
@@ -606,7 +606,7 @@
 				<tr>
 					<td align="center"><a href="reviewer.html" target="_blank" rel="noopener noreferrer">审稿人</a></td>
 					<td>
-						&#9679; 43本国际期刊，包括Nat. Commun.、Biomed. Signal Process. Control、Geo-Spat. Inf. Sci., Remote Sens.、Front. Physiol.、Front Bioeng. Biotechnol.、Physiol. Meas.、Phys. Scr.、 ISPRS Int. J. Geo-Inf.、Biomimetics、Biosensors等<br>
+						&#9679; 43本国际期刊，包括Nat. Commun.、Biomed. Signal Process. Control、Geo-Spat. Inf. Sci., Remote Sens.、Front. Plant Sci.、Front Bioeng. Biotechnol.、Physiol. Meas.、Phys. Scr.、 ISPRS Int. J. Geo-Inf.、Biomimetics、Biosensors等<br>
 						&#9679; 多个国际会议, 包括IEEE BSN, BHI; ACM ICMI, ISWC, AUTOMOTIVEUI; ITP<br>
 						&#9679; <a href="images/IOP_Certificate.png" target="_blank" rel="noopener noreferrer">IOP Trusted Reviewer</a> 表彰“极其高水平的同行评审胜任力”（<i>an exceptionally high level of peer review competency</i>）<br>
 						&#9679; Sensors <a href="https://www.mdpi.com/journal/sensors/awards/2188" target="_blank" rel="noopener noreferrer">2023 最佳审稿人奖</a>
