--- a/publications.html
+++ b/publications.html
@@ -129,12 +129,10 @@
 	</tr></td>
 	-->
 	<tr><td>
-		<i>TPRO-NET: An EEG-Based Emotion Recognition Method Feflecting Subtle Changes in Emotion.</i> Zhang, X., Cheng, X.*, and Liu, H.* (2024). Scientific Reports. Springer Nature.<br>
-		<!--
-		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-	    &nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		-->
-		<a href="https://www.researchgate.net/publication/381352163_TPRO-NET_an_EEG-based_emotion_recognition_method_reflecting_subtle_changes_in_emotion" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		<i>TPRO-NET: An EEG-Based Emotion Recognition Method Feflecting Subtle Changes in Emotion.</i> Zhang, X., Cheng, X.*, and Liu, H.* (2024). Scientific Reports, 14:13491. Springer Nature.<br>
+		<a href="https://scholar.google.com/scholar?q=TPRO-NET%3A+An+EEG-Based+Emotion+Recognition+Method+Feflecting+Subtle+Changes+in+Emotion" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+	    &nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/TPRO-NET%3A-an-EEG-based-emotion-recognition-method-Zhang-Cheng/5b1c1fa371e436215731026398119a2882a13cb4" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/381352163_TPRO-NET_an_EEG-based_emotion_recognition_method_reflecting_subtle_changes_in_emotion" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.nature.com/articles/s41598-024-62990-4" target="_blank" rel="noopener noreferrer"><img src="images/Springer_Professional.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/article/10.1038/s41598-024-62990-4?" target="_blank" rel="noopener noreferrer"><img src="images/SpringerLink.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=zhang2024eeg_emotion&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
