--- a/enkas/あ.html
+++ b/enkas/あ.html
@@ -53,11 +53,11 @@
 <br>
 あの時　一緒になって　何みてた<br>
 泣いたりして　ないよね<br>
-そばにいなくても<br>
+そばに　いなくても<br>
 <br>
 3 これから　どこに行って　何してく<br>
 泣いたりして　ないよね<br>
-そばにいなくても<br>
+そばに　いなくても<br>
 </h1><br><h3><a href="#あ">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="あこがれの郵便馬車">【あこがれの郵便馬車】</a>F1-G2<br>
@@ -202,9 +202,9 @@ Partyには行きたい（な…）<br>
 1 私のせいなら　許してください<br>
 あなたをこんなに　苦しめたことを<br>
 私のことなど　これきり忘れて<br>
-明るい陽なたを　歩いてほしい<br>
+明るい<ruby><rb>日向</rb><rt>ひなた</rt></ruby>を　歩いてほしい<br>
 <br>
-<ruby><rb>枯葉</rb><rt>かれは</rt></ruby>が一つずつこぼれるたびに<br>
+<ruby><rb>枯葉</rb><rt>かれは</rt></ruby>が一つずつ<ruby><rb>零</rb><rt>こぼ</rt></ruby>れるたびに<br>
 悲しい　お別れ近づいてます<br>
 泣いたり　笑ったり　喧嘩をしたり<br>
 あなたといる限り　素直になれました<br>
@@ -216,12 +216,12 @@ Partyには行きたい（な…）<br>
 2 私のせいなら　許してください<br>
 あなたを知らずに　傷つけたことを<br>
 私は一人で　どうにかなるから<br>
-いい人<ruby><rb>必</rb><rt>かなら</rt></ruby>ず　見つけて欲しい<br>
+いい人<ruby><rb>必</rb><rt>かなら</rt></ruby>ず　見付けて欲しい<br>
 <br>
 小石を一つずつ<ruby><rb>並</rb><rt>なら</rt></ruby>べるように<br>
 いろんな想い出　<ruby><rb>数</rb><rt>かぞ</rt></ruby>えています<br>
 人から　愛される　幸福の意味<br>
-あなたは手をとって　教えてくれました<br>
+あなたは手を取って　教えてくれました<br>
 <br>
 “ありがとう　あなた”<br>
 あとどのくらい　愛されますか<br>
@@ -236,7 +236,7 @@ Partyには行きたい（な…）<br>
 ふと思い出す　元気ですか?<br>
 <br>
 夢を追いかけて　離れた街<br>
-見送ってくれたあの春の日<br>
+見送ってくれた　あの春の日<br>
 <br>
 頼りなかった僕に<br>
 「<ruby><rb>後悔</rb><rt>こうかい</rt></ruby>だけはしないで」と<br>
@@ -371,7 +371,7 @@ Partyには行きたい（な…）<br>
 <br><hr><br><h1>
 <a id="安里屋ユンタ">【安里屋ユンタ】</a>A1-C3<br>
 <br>
-1 サー君は野中の　いばらの花か<br>
+1 サー君は野中の　<ruby><rb>茨</rb><rt>いばら</rt></ruby>の花か<br>
 暮れて帰れば　やれほんに引き止める<br>
 マタハーリヌ　ツィンダラ　カヌシャマヨ<br>
 <br>
@@ -384,7 +384,7 @@ Partyには行きたい（な…）<br>
 マタハーリヌ　ツィンダラ　カヌシャマヨ<br>
 <br>
 4 サー　染めてあげましょ　<ruby><rb>紺地</rb><rt>こんじ</rt></ruby>の小袖<br>
-<ruby><rb>掛</rb><rt>か</rt></ruby>けておくれよ　情のたすき<br>
+<ruby><rb>掛</rb><rt>か</rt></ruby>けておくれよ　情の<ruby><rb>襷</rb><rt>たすき</rt></ruby><br>
 マタハーリヌ　ツィンダラ　カヌシャマヨ<br>
 <br>
 5 サー　沖縄よいとこ　一度はおいで<br>
@@ -461,7 +461,7 @@ Partyには行きたい（な…）<br>
 だけど今は遠い　遠いところにいるの<br>
 <br>
 2 ほら見てごらん坊や　綺麗なお星様を<br>
-あれはパパなの坊や　いつもあなたを見ているの<br>
+あれはパパなの坊や　いつもあなたを見てるの<br>
 ママはいいの一人でも　あなたが傍にいれば<br>
 だってあなたはパパの　パパの子供だから<br>
 <br>
@@ -526,7 +526,7 @@ Partyには行きたい（な…）<br>
 ２ 愛は風のささやき　あなたは目<ruby><rb>覚</rb><rt>ざ</rt></ruby>める<br>
 子供の様な　瞳を向けて　指を<ruby><rb>絡</rb><rt>から</rt></ruby>めるよ<br>
 <br>
-そっと肌をよせれば　水仙の花のような<br>
+そっと肌をよせれば　水仙の花の様な<br>
 優しい香りが　<ruby><rb>恥</rb><rt>は</rt></ruby>じらう様に　揺れている<br>
 <br>
 美しい人生は　言葉さえ置き忘れ<br>
@@ -631,13 +631,13 @@ pink, yellow green, ash, brown……<br>
 私は　見送る女でいいの<br>
 <br>
 尽くして　泣きぬれて　そして愛されて<br>
-明日が二人を　怖さぬように<br>
+明日が二人を　こわさぬように<br>
 離れて　恋しくて　そして会いたくて<br>
 このままあなたの　胸で　眠りたい<br>
 <br>
 3 尽くして　泣きぬれて　そして愛されて<br>
-時が二人を　離さぬように<br>
-見つめて　寄りそって　そして抱きしめて<br>
+明日が二人を　こわさぬように<br>
+離れて　恋しくて　そして会いたくて<br>
 このままあなたの　胸で　暮らしたい<br>
 </h1><br><h3><a href="#あ">Back to Top</a></h3>
 <br><hr><br><h1>
@@ -663,7 +663,7 @@ pink, yellow green, ash, brown……<br>
 心秘そかな嬉し涙を　流したりして<br>
 <br>
 人は可愛い　可愛いものですね<br>
-ああ過去達は　優しくまつげにいこう<br>
+ああ過去達は　優しく<ruby><rb>睫毛</rb><rt>まつげ</rt></ruby>に<ruby><rb>憩</rb><rt>いこ</rt></ruby>う<br>
 人生って　不思議なものですね<br>
 <br>
 4 あゃ　未来達は　人待ち顔して微笑む<br>
@@ -760,7 +760,7 @@ pink, yellow green, ash, brown……<br>
 早く暖めて欲しい<br>
 <br>
 2 あとどれくらい　傷ついたなら<br>
-あなたに<ruby><rb>辿</rb><rt>辿</rt></ruby>り　つけるのかしら<br>
+あなたに<ruby><rb>辿</rb><rt>たど</rt></ruby>り　つけるのかしら<br>
 <br>
 洗いたてのシャツの　匂いに抱きすくめ<br>
 られたら　痛みも悲しみも<br>
