--- a/enkas/お.html
+++ b/enkas/お.html
@@ -68,7 +68,7 @@ Oh Oh I<br>
 インチキおじさん　<ruby><rb>登場</rb><rt>とうじょう</rt></ruby><br>
 いつだって　忘れない<br>
 エジソンは　<ruby><rb>偉</rb><rt>えら</rt></ruby>い人<br>
-そんなの　<ruby><rb>常識</rb><rt>しき</rt></ruby>　タッタタラリラ<br>
+そんなの　<ruby><rb>常識</rb><rt>じょうしき</rt></ruby>　タッタタラリラ<br>
 <br>
 ピーヒャラ　ピーヒャラ　パッパパラパ<br>
 ピーヒャラ　ピーヒャラ　パッパパラパ<br>
@@ -95,7 +95,7 @@ Oh Oh I<br>
 <br>
 3 いつだって　忘れない<br>
 エジソンは　<ruby><rb>偉</rb><rt>えら</rt></ruby>い人<br>
-そんなの　<ruby><rb>常識</rb><rt>しき</rt></ruby>　タッタタラリラ<br>
+そんなの　<ruby><rb>常識</rb><rt>じょうしき</rt></ruby>　タッタタラリラ<br>
 <br>
 ピーヒャラ　ピーヒャラ　パッパパラパ<br>
 ピーヒャラ　ピーヒャラ　パッパパラパ<br>
