--- a/research.html
+++ b/research.html
@@ -769,7 +769,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td align="center"><a href="https://frauenseiten.bremen.de/termine/mindday-kognitionswissenschaft-zum-anfassen/" target="_blank" rel="noopener noreferrer"><img src="images/MindDay.png" height="40"></a><br>Bremen, Germany 2021</td>
+					<td align="center"><img src="images/MindDay.png" height="40"><br>Bremen, Germany 2021</td>
 					<td>
 						&#9679; Demonstration of intelligent knee bandage <img src="images/MindDay21.jpg" height="12" class="pop40"><br>
 						&#9679; @ <a href="https://www.uebersee-museum.de/en/" target="_blank" rel="noopener noreferrer"><img src="images/Museum.png" height="12"></a> Übersee-Museum Bremen</td>
@@ -778,6 +778,10 @@
 				<tr>
 					<td align="center"><a href="https://www.bridge-online.de/campusideen" target="_blank" rel="noopener noreferrer"><img src="images/CAMPUSiDEEN22.jpg" height="50" class="pop5"></a><br>CAMPUSiDEEN 2022<br>Business Idea Competition</td>
 					<td>&#9679; <a href="https://bridge-online.de/en/campusideen/review/2022-3rd-audience-award" target="_blank" rel="noopener noreferrer">3<sup>rd</sup> Audience Award</a> <img src="images/CAMPUSiDEEN.png" height="12" class="pop40"><td>
+				</tr>
+				<tr>
+					<td align="center"><img src="images/Golden_Panda.png" height="50"><br>Golden Panda 2022<br>Global Competition of<br>Innovation & Entrepreneurship</td>
+					<td>&#9679; Ambassador and Judge<td>
 				</tr>
 			</table></td></tr>
 
