--- a/researchcn.html
+++ b/researchcn.html
@@ -763,7 +763,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td align="center"><a href="https://frauenseiten.bremen.de/termine/mindday-kognitionswissenschaft-zum-anfassen/" target="_blank" rel="noopener noreferrer"><img src="images/MindDay.png" height="40"></a><br>“智慧头脑日”展览研讨会<br>德国不来梅 2021</td>
+					<td align="center"><img src="images/MindDay.png" height="40"><br>“智慧头脑日”展览研讨会<br>德国不来梅 2021</td>
 					<td>
 						&#9679; 技术演示：人工智能膝盖绷带 <img src="images/MindDay21.jpg" height="12" class="pop40"><br>
 						&#9679; 举办地：<a href="https://www.uebersee-museum.de/" target="_blank" rel="noopener noreferrer"><img src="images/Museum.png" height="12"></a> 不来梅海外博物馆</td>
@@ -772,6 +772,10 @@
 				<tr>
 					<td align="center"><a href="https://www.bridge-online.de/campusideen" target="_blank" rel="noopener noreferrer"><img src="images/CAMPUSiDEEN22.jpg" height="50" class="pop5"></a><br>CAMPUSiDEEN 2022<br>商业创意大赛<br></td>
 					<td>&#9679; <a href="https://bridge-online.de/en/campusideen/review/2022-3rd-audience-award" target="_blank" rel="noopener noreferrer">公共选择奖</a> <img src="images/CAMPUSiDEEN.png" height="12" class="pop40"><td>
+				</tr>
+				<tr>
+					<td align="center"><img src="images/Golden_Panda.png" height="50"><br>金熊猫全球创新创业大赛 2022<br>成都市人民政府举办</td>
+					<td>&#9679; 欧洲区评委、宣传大使<td>
 				</tr>
 			</table></td></tr>
 			<tr><td></td></tr><tr><td></td></tr>
