--- a/research.html
+++ b/research.html
@@ -136,9 +136,20 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.26092/elib/1219" target="_blank" rel="noopener noreferrer">10.26092/elib/1219</a>
 				</td></tr>
 			
-				<tr><td><img src="images/Chapter.png" height="25"></td></tr>
+				<tr><td><img src="images/Chapter.png" height="25">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/Editorial.png" height="25"></td></tr>
 				<tr><td>
-					<i>High-Level Features for Human Activity Recognition and Modeling.</i> Hartmann, Y., Liu, H., and Schultz, T. (2023). Biomedical Engineering Systems and Technologies. Springer Nature Switzerland.<br>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>Human Activity Recognition, Monitoring, and Analysis Facilitated by Novel and Widespread Applications of Sensors.</i> Liu, H.*, Gamboa, H., and Schultz, T. (2024). Sensors.<br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+					-->
+				</td></tr>
+				<tr><td>
+					<i>High-Level Features for Human Activity Recognition and Modeling.</i> Hartmann, Y.*, Liu, H., and Schultz, T. (2023). Biomedical Engineering Systems and Technologies. Springer Nature Switzerland.<br>
 					<a href="https://scholar.google.com/scholar?q=High-Level+Features+for+Human+Activity+Recognition+and+Modeling" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/High-Level-Features-for-Human-Activity-Recognition-Hartmann-Liu/d247cc3dbe4ea9673b8f2bebdd62a10eef42d978" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/372525464_High-Level_Features_for_Human_Activity_Recognition_and_Modeling" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -149,7 +160,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/book/10.1007/978-3-642-18472-7" target="_blank" rel="noopener noreferrer"><img src="images/Book.png" height="15"></a>
 				</td></tr>
 				<tr><td>
-					<i>Sensor-Based Human Activity and Behavior Research: Where Advanced Sensing and Recognition Technologies Meet.</i> Liu, H.*, Gamboa, H., and Schultz, T. (2023). Sensors, 23(1):125. MDPI.<br>
+					<i>Sensor-Based Human Activity and Behavior Research: Where Advanced Sensing and Recognition Technologies Meet.</i> Liu, H.*, Gamboa, H., and Schultz, T. (2023). Sensors, 23(1):125.<br>
 					<a href="https://scholar.google.com/scholar?q=sensor-based+human+activity+and+behavior+research" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Sensor-Based-Human-Activity-and-Behavior-Research%3A-Liu-Gamboa/d775d7f0105130e9f47ef95fd73d46243e385848" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/366563962_Sensor-Based_Human_Activity_and_Behavior_Research_Where_Advanced_Sensing_and_Recognition_Technologies_Meet" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
